@@ -3,6 +3,10 @@ cod-tools (unreleased)
   * Added:
     - cif_sort_atoms:
       - the '--record-original-order', '--order-child-loops' options.
+  * Changed:
+    - COD::CIF::Data::AtomList:
+      - oxidation state is now read from '_atom_type_oxidation_number'
+        CIF data item, if available.
 
 cod-tools (3.1.0)
 
